[metadata]
name = cavnue-data
version = file: VERSION
description =  Cavnue Data
long_description = file: README.md
classifiers =
        Development Status :: 4 - Beta
        Programming Language :: Python :: 3
maintainer = Cavnue Software <software@cavnue.com>
autor = Cavnue Software <software@cavnue.com>
license_files = 
        LICENSE
zip_safe = False

[options]
python_requires = >=3.6
setup_requires = 
        setuptools >= 42
        wheel
install_requires =
        protobuf>=4.22
        pytest >= 7.3.1
        cavnue-messages ## put version here ##
package_dir =
        = src
packages = find_namespace:

[options.packages.find]
where = src
